--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<button mat-raised-button color="primary">Intro</button>
+<button mat-raised-button color="primary" style="margin-right: 1rem;">Login</button>
 
-<button mat-raised-button color="primary">Contact</button>
+<button mat-raised-button color="primary">Loyalty</button>
 
 <router-outlet></router-outlet>
 
@@ -19,6 +19,9 @@
         <li>Try to Resolve data before redirecting to /loyalty => (Try to use Angular Resolvers)</li>
         <li>Loading indicator would be nice also here while loading data (do not remove delays they have been added on purpose)</li>
         <li>Each loyalty step is a circular button, and displays the info on the top card when clicked </li>
-        <li>Loyalty step buttons have a popover that displays the </li>
+        <li>Loyalty step buttons have a popover that displays the award points on mouse hover</li>
     </ul>
+
+    <p class="mat-typography">In general, use techniques that you already know, except for the cases we suggest something else </p>
+
 </div>
